--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
   <script src="lib/angular.js"></script>
   <script src="lib/angular-ui-router.js"></script>
   <script src="app.js"></script>
-  <script src="controllers/MoviesControllers.js"></script>
-  <script src="controllers/ReviewsController.js"></script>
+  <script src="controllers/MoviesController.js"></script>
+  <script src="controllers/HeadersController.js"></script>
   <script src="services/MoviesFactory.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <div class="container">
-    <div class="row">
-      <div ui-view></div>
-    </div>
+    <div ui-view="header"></div>
+    <div ui-view="body"></div>
   </div>
 
 </body>
