working on show and hide

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="app.js"></script>
   <script src="controllers/ReviewsController.js"></script>
   <script src="controllers/HeadersController.js"></script>
+  <script src="directives/customdirectives.js"></script>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
 </head>
